--- a/Resources/Settings.bundle/Root.plist
+++ b/Resources/Settings.bundle/Root.plist
@@ -12,7 +12,7 @@
 			<key>Title</key>
 			<string>Random Tags</string>
 			<key>Key</key>
-			<string>random_tags_preference</string>
+			<string>isRandomTags</string>
 			<key>DefaultValue</key>
 			<true/>
 		</dict>
