--- a/Quizit.xcodeproj/xcshareddata/xcschemes/Quizit-watchOS.xcscheme
+++ b/Quizit.xcodeproj/xcshareddata/xcschemes/Quizit-watchOS.xcscheme
@@ -54,8 +54,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Quizit">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E0C74C2C25F8473F001A3B64"
@@ -63,7 +65,7 @@
             BlueprintName = "Quizit-watchOS"
             ReferencedContainer = "container:Quizit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,8 +73,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Quizit">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E0C74C2C25F8473F001A3B64"
@@ -80,7 +84,16 @@
             BlueprintName = "Quizit-watchOS"
             ReferencedContainer = "container:Quizit.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E0C74C2C25F8473F001A3B64"
+            BuildableName = "Quizit-watchOS.app"
+            BlueprintName = "Quizit-watchOS"
+            ReferencedContainer = "container:Quizit.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
