--- a/Quizit.xcodeproj/xcshareddata/xcschemes/Quizit-watchOS.xcscheme
+++ b/Quizit.xcodeproj/xcshareddata/xcschemes/Quizit-watchOS.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Quizit">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E0C74C2C25F8473F001A3B64"
@@ -65,7 +63,7 @@
             BlueprintName = "Quizit-watchOS"
             ReferencedContainer = "container:Quizit.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Quizit">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E0C74C2C25F8473F001A3B64"
@@ -84,16 +80,7 @@
             BlueprintName = "Quizit-watchOS"
             ReferencedContainer = "container:Quizit.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "E0C74C2C25F8473F001A3B64"
-            BuildableName = "Quizit-watchOS.app"
-            BlueprintName = "Quizit-watchOS"
-            ReferencedContainer = "container:Quizit.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
